modify automake file scribe

--- a/configure.in
+++ b/configure.in
@@ -4,22 +4,24 @@
 AC_PREREQ([2.69])
 AC_INIT(JHttpServer, 0.0.1, wuyouqiangxihuan@163.com)
 AM_INIT_AUTOMAKE(JHttpServer, 0.0.1)
-AC_CONFIG_SRCDIR([main.c])
+AC_CONFIG_SRCDIR([config.h.in])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CC
 
 # Checks for libraries.
+# FIXME: Replace `main' with a function in `-levent':
+AC_CHECK_LIB([event], [main])
+# FIXME: Replace `main' with a function in `-lpthread':
+AC_CHECK_LIB([pthread], [main])
 
 # Checks for header files.
-AC_CHECK_HEADERS([stdlib.h string.h])
+
 # Checks for typedefs, structures, and compiler characteristics.
 
 # Checks for library functions.
-AC_FUNC_MALLOC
-AC_FUNC_REALLOC
-AC_CHECK_FUNCS([memset])
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([Makefile
+                 src/Makefile])
 AC_OUTPUT
