--- a/src/Makefile
+++ b/src/Makefile
@@ -157,7 +157,7 @@ AUTOMAKE = ${SHELL} /home/brucewoo/workspace/JHttpServer/missing automake-1.13
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g
+CFLAGS = -g -O2
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
